*
* 1.2.2
*

- New NXSL function: GetObjectParents


*
* 1.2.1
*

- Implemented dashboard export/import
- New NXSL functions for direct SNMP access
- New NXSL functions for getting min, max, and average DCI value for period
- Fixed memory leak in NXSL functions gmtime and localtime
- Fixed memory leak in configuration poller
- Added driver for HP E-series (ProCurve) switches
- Implemented "sticky" alarm acknowledgements
- Added option to disable automatic node unbinding from containers
- Added option to disable automatic template removal
- Added events for automatic container binding and unbinding
- Added events for automatic template apply and remove
- Java console:
	- Configuration export implemented
	- Added object status indication bar in object browser
	- Added filtering by IP address and comments in object browser
- Web UI:
	- Windows installer improved
	- Line charts improved
- Agent now allows to define management server address as subnet
- Additional I/O parameters in Solaris agent
- Fixed bugs with static agent build
- Fixed issues: #333, #340, #343, #353


*
* 1.2.0
*

- Number of polls required for status change can be set individually for each interface
- New NXSL functions and object properties for accessing topology information
- New NXSL function FindObject
- New NXSL functions for object creation and binding
- Added option to set native agent port on node creation
- Added support for INFORM messages in SNMP trap receiver
- Implemented automatic creation of ChildStatus DCI when Network Service object created for Node
- Implemented concept of "expected" interface state
- Added option to use DNS names instead of IP addresses as primary host name for discovered nodes
- Added possibility to add parameters and/or specify entry point in scripts called via %[] macro
- Implemented alarm comments
- Initial support for multi-valued (tabular) DCI
- Java console:
	- Added alarm history log viewer
	- Time interval for line charts on dashboards made configurable